package com.hilog.hiloglib.callback

enum class ErrorType {
    CREATE_FILE_ERROR

}