package com.hilog.hiloglib.callback

interface StateCallBack {

    fun onError(state: ErrorType, msgError: String) {

    }
}